.kube-eks/coubee-be-gateway-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: coubee-be-loadbalancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: coubee-be-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
